--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>hi</h1>
 <p>this is the cool</p>
 <p>i got a free domain and now im gonna do the silly with it while it lasts</p>
+<p>weenor</p>
